# pytest-markdown-docs

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/workflows/: check.yml  ci.yml  codeql.yml
src/pytest_markdown/: hooks.py  plugin.py
src/pytest_markdown_docs/: __init__.py  _comment_parser.py  _runners.py  definitions.py  hooks.py  plugin.py
src/pytest_markdown_docs/.agents/skills/pytest-markdown-docs/: SKILL.md
tests/: conftest.py  plugin_test.py
tests/support/: docstring_error_after.py  docstring_error_before.py
