[tool.poetry]
name = "pytest-markdown-docs"
version = "0.5.0"
description = "Run markdown code fences through pytest"
readme = "README.md"
authors = ["Modal Labs", "Elias Freider <elias@modal.com>"]
license = "MIT"
classifiers = ["Framework :: Pytest"]
repository = "https://github.com/modal-com/pytest-markdown-docs"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.8"
markdown-it-py = ">=2.2.0, <4.0"
pytest = ">=7.0.0"

[tool.poetry.plugins]

[tool.poetry.plugins."pytest11"]
"pytest_markdown_docs" = "pytest_markdown_docs.plugin"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
mypy = "^1.8.0"
pre-commit = [
    {version="*", python=">=3.9.0"}  # pre-commit only available for Python >= 3.9
]
pytest = "8.1.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
