[project]
name = "pytest-markdown-docs"
version = "0.8.0"
description = "Run markdown code fences through pytest"
readme = "README.md"
authors = [
    { name = "Modal Labs"},
    { name = "Elias Freider", email = "elias@modal.com" } 
]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "markdown-it-py>=2.2.0,<4.0",
    "pytest>=7.0.0",
]
include = ["LICENSE"]

[project.entry-points.pytest11]
pytest_markdown_docs = "pytest_markdown_docs.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package=true
dev-dependencies = [
    "mypy>=1.12.1",
    "pre-commit>=3.5.0",
    "pytest~=8.1.0",
    "ruff~=0.9.10",
]
