[project]
name = "pytest-markdown-docs"
version = "0.9.2"
description = "Run markdown code fences through pytest"
readme = "README.md"
authors = [
    { name = "Modal Labs"},
    { name = "Elias Freider", email = "elias@modal.com" } 
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "markdown-it-py>=2.2.0,<4.0",
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/modal-labs/pytest-markdown-docs"
Repository = "https://github.com/modal-labs/pytest-markdown-docs"
"Issue Tracker" = "https://github.com/modal-labs/pytest-markdown-docs/issues"


[project.entry-points.pytest11]
pytest_markdown_docs = "pytest_markdown_docs.plugin"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "mypy>=1.12.1",
    "pre-commit>=3.5.0",
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff~=0.9.10",
    "mdit-py-plugins~=0.4.2",
]
